# serp-python

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  authentication.html  basics.html  entries.html  genindex.html  groups.html  index.html  objects.inv  origins.html  profiles.html  pyproject.toml  search.html  searchindex.js  setup.py  spaces.html  tokens.html
.doctrees/: authentication.doctree  basics.doctree  entries.doctree  environment.pickle  groups.doctree  index.doctree  origins.doctree  profiles.doctree  spaces.doctree  tokens.doctree
.github/workflows/: main.yml
_sources/: entries.rst.txt  groups.rst.txt  index.rst.txt  origins.rst.txt  profiles.rst.txt  spaces.rst.txt
_static/: documentation_options.js
docs/: authentication.md  basics.md  entries.md  groups.md  origins.md  profiles.md  spaces.md  tokens.md
docs/source/: authentication.rst  basics.rst  conf.py  entries.rst  groups.rst  origins.rst  profiles.rst  spaces.rst  tokens.rst
orbl_onpremise/: __init__.py  base.py  clients.py  constants.py  utils.py
orbl_onpremise/asm/: v1.py
orbl_onpremise/auth/: v1.py
orbl_onpremise/compare/: v1.py
orbl_onpremise/entries/: v1.py
orbl_onpremise/groups_profiles/: v1.py
scripts/: clean.sh  lint.sh  publish.sh  test.sh
serp/: __init__.py  auth_token.py  clients.py  constants.py  utils.py
serp_onpremise/: clients.py  utils.py
tests/: conftest.py  test_auth.py  test_entries.py  test_groups.py  test_origins.py  test_profiles.py  test_spaces.py  test_sync_client.py  test_tokens.py  test_utility.py  test_utils.py  test_whoami.py  utils.py
(+40 files in other folders)
