[tool.poetry]
name = "serp"
version = "0.1.5"
description = "A Python package for interacting with SERP API"
authors = ["serptech.ru"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
httpx = ">=0.19.0"
websockets = "^10.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
safety = "^1.10.3"
isort = "^5.9.3"
flake8 = "^5.0.4"
black = {version = "^22.3", allow-prereleases = true}
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
respx = "^0.20.1"
pep8-naming = "^0.12.1"
portray = "^1.7.0"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
